# Loupe

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  Filters.cmake  GitTools.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Utilities.cmake
loupe/: CMakeLists.txt  archiver.cpp  archiver.h  assert.h  core_data.cpp  core_data.h  core_data.inl  loupe.cpp  loupe.h  loupe.inl  metadata.h  metadata_tags  metadata_tags.h  private_members.h  property_adapters.h  type_adapters.h
samples/: CmakeLists.txt
tests/: CMakeLists.txt  CmakeLists.txt  arrays.cpp  blob.cpp  enums.cpp  fundamentals.cpp  lifetimes.cpp  main.cpp  maps.cpp  pointers.cpp  serialization.cpp  structures.cpp  test_data.cpp  test_data.h  tests.cpp  type_descriptor.cpp  variants.cpp
